# mcp-eastmoney

./: .gitignore  Dockerfile  LICENSE  PROMOTION.md  README.md  pyproject.toml
examples/: CLAUDE_DESKTOP.md  cursor_mcp_config.json  sample_prompts.md
src/mcp_eastmoney/: __init__.py  eastmoney.py  server.py
tests/: test_live.py  test_mcp_protocol.py
